[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "concoursetools"
dynamic = ["version"]
description = "Easily create Concourse resource types in Python."
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "concourse",
    "ci",
    "cd",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
    "Typing :: Typed",
]
authors = [
    {name = "GCHQ", email = "oss@gchq.gov.uk"},
]
license = {text = "Apache License 2.0"}

[project.urls]
"Homepage" = "https://github.com/gchq/ConcourseTools/"
"Documentation" = "https://concoursetools.readthedocs.io/en/stable/"
"Repository" = "https://github.com/gchq/ConcourseTools/"
"Bug Tracker" = "https://github.com/gchq/ConcourseTools/issues"
"Changelog" = "https://concoursetools.readthedocs.io/en/latest/whats_new.html"

[tool.setuptools]
packages = [
    "concoursetools",
    "concoursetools.cli",
]

[tool.setuptools.dynamic]
version = {attr = "concoursetools.__version__"}


[tool.autopep8]
max_line_length = 150
ignore = ["E301", "E501"]
in-place = true
recursive = true
aggressive = 3


[tool.coverage.run]
command_line = "-m unittest discover"
source = ["concoursetools"]
omit = ["concoursetools/colour.py", "concoursetools/typing.py", "*/__init__.py", "*/__main__.py"]

[tool.coverage.report]
sort = "Cover"
exclude_lines = [
    "@abstractmethod",
    "def __repr__",
    "pass",
    "raise$",
    "raise RuntimeError",
]


[tool.isort]
line_length = 150
force_sort_within_sections = true


[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
disallow_any_generics = true
disable_error_code = ["override"]


[tool.pylint]
max-line-length = 150
disable = ["too-many-arguments", "too-few-public-methods"]
good-names = ["wf"]
ignore-paths = ["docs/source/conf.py", "tests"]


[tool.pydocstyle]
ignore = ["D102", "D105", "D107", "D200", "D203", "D204", "D205", "D212", "D400", "D415"]
