[metadata]
name = concoursetools
version = 0.7.0
description = Easily create Concourse resource types in Python.
author = GCHQ
author_email = oss@gchq.gov.uk
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = Apache License 2.0
keywords =
    concourse
    ci
    cd
url = https://github.com/gchq/ConcourseTools
project_urls =
    Documentation = https://gchq.github.io/ConcourseTools/
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development
    Typing :: Typed

[options]
zip_safe = False
python_requires = >=3.8
packages =
    concoursetools

[options.package_data]
concoursetools = py.typed
