[metadata]
name = concoursetools
version = 0.7.1
description = Easily create Concourse resource types in Python.
author = GCHQ
author_email = oss@gchq.gov.uk
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = Apache License 2.0
keywords =
    concourse
    ci
    cd
url = https://github.com/gchq/ConcourseTools/
project_urls =
    Bug Tracker = https://github.com/gchq/ConcourseTools/issues
    Documentation = https://concoursetools.readthedocs.io/en/stable/
    Source Code = https://github.com/gchq/ConcourseTools/
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development
    Typing :: Typed

[options]
zip_safe = False
python_requires = >=3.9
packages =
    concoursetools
    concoursetools.cli

[options.package_data]
concoursetools = py.typed
